temp_output.txt
warning: variable does not need to be mutable
   --> crates\vox-corpus\src\synthetic_gen.rs:518:13
    |
518 |         let mut rng = Rng::new(cfg.seed, name_hash(skill));
    |             ----^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `rng`
   --> crates\vox-corpus\src\synthetic_gen.rs:518:13
    |
518 |         let mut rng = Rng::new(cfg.seed, name_hash(skill));
    |             ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_rng`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: fields `a2a_messages` and `orchestrator_commands` are never read
   --> crates\vox-corpus\src\synthetic_gen.rs:180:5
    |
178 | struct SyntheticTemplates {
    |        ------------------ fields in this struct
179 |     tool_definitions: Vec<String>,
180 |     a2a_messages: Vec<String>,
    |     ^^^^^^^^^^^^
181 |     skills: Vec<String>,
182 |     orchestrator_commands: Vec<String>,
    |     ^^^^^^^^^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: `vox-corpus` (lib) generated 3 warnings (run `cargo fix --lib -p vox-corpus` to apply 2 suggestions)
    Checking vox-cli v0.1.0 (C:\Users\Owner\vox\crates\vox-cli)
    Checking vox-mcp v0.1.0 (C:\Users\Owner\vox\crates\vox-mcp)
warning: unused import: `HirType`
 --> crates\vox-test-harness\src\hir_builders.rs:7:43
  |
7 |     HirFn, HirModule, HirRoute, HirTable, HirType,
  |                                           ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `vox-test-harness` (lib) generated 1 warning (run `cargo fix --lib -p vox-test-harness` to apply 1 suggestion)
warning: usage of an `unsafe` block
   --> crates\vox-cli\src\training\mod.rs:650:20
    |
650 |             return unsafe { &*(axes as *const ConstructAxes) };
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    |
    = note: requested on the command line with `-W unsafe-code`

error[E0308]: mismatched types
    --> crates\vox-cli\src\commands\corpus.rs:1007:15
     |
1007 |         .map(|(name, _)| *name)
     |               ^^^^^^^^^
     |               |
     |               expected `str`, found `(_, _)`
     |               expected due to this
     |
     = note: expected type `str`
               found tuple `(_, _)`

For more information about this error, try `rustc --explain E0308`.
warning: `vox-cli` (lib) generated 1 warning
error: could not compile `vox-cli` (lib) due to 1 previous error; 1 warning emitted
